--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>test</title>
+</head>
+<h1>H1 teste</h1>
+<h2>H2 teste</h2>
+<h3>H3 teste</h3>
