added data and site draft

--- a/site_scrolly/index.html
+++ b/site_scrolly/index.html
@@ -2,6 +2,11 @@
 <html lang="pt">
 <head>
 	<title>Pandemia</title>
+
+	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	
 	<link rel='stylesheet' href='./css/style.css'/>
 	<link rel='stylesheet' href='graphic.css' />
 </head>
@@ -28,7 +33,7 @@
 	</main>
 
 	<!-- for the graphic -->
-	<script src='d3.v4.min.js'></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src='graphic.js'></script>
 
 	<!-- The scroll library -->
