add plotly to site

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
                         <h2>Cá dentro</h2>
                         <p>Começaram a aparecer casos em Março, e pouco depois o Governo anunciou as medidas de quarentena.</p>
+                        <div>
+                            <a href="https://plotly.com/~anafrs/1/?share_key=cy91MUaOseUuPDrrOx6wjS" target="_blank" title="numero de noticias publico" style="display: block; text-align: center;"><img src="https://plotly.com/~anafrs/1.png?share_key=cy91MUaOseUuPDrrOx6wjS" alt="numero de noticias publico" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plotly.com/404.png';" /></a>
+                            <script data-plotly="anafrs:1" sharekey-plotly="cy91MUaOseUuPDrrOx6wjS" src="https://plotly.com/embed.js" async></script>
+
+                            <iframe width="900" height="800" frameborder="0" scrolling="no" src="//plotly.com/~anafrs/1.embed"></iframe>
+                        </div>
 
                         <h2>O confinamento</h2>
                         <p>Fechados em casa...</p>
