some changes to correct a bug

--- a/index.html
+++ b/index.html
@@ -33,11 +33,19 @@
     </div>
 
     <!-- SECTION 1 -->
-    <div class="section1 library__hed">
+    <div class='section1 library__hed'>
       <div class='library__graphic graphic'>
 
         <div class='graphic__prose'>
-          
+          <p class='trigger' data-step='-1'>Algum contexto</p>
+          <p class='trigger' data-step='1'>Em Janeiro</p>
+          <p class='trigger' data-step='2'>Em Fevereiro</p>
+          <p class='trigger' data-step='3'>Em Março</p>
+          <p class='trigger' data-step='4'>Em Abril</p>
+          <p class='trigger' data-step='5'>Em Maio</p>
+          <p class='trigger' data-step='6'>Em Junho</p>
+          <p class='trigger' data-step='7'>Em Julho</p>
+          <p class='trigger' data-step='8'>Em Agosto</p>
         </div>
 
         <div class='graphic__vis'></div>
