add independent scroll sections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- SECTION 1 -->
     <div class='section1 library__hed'>
       <div class='library__graphic graphic'>
-
+        <h2>Gráfico 1</h2>
         <div class='graphic__prose'>
           <p class='trigger' data-step='-1'>Algum contexto</p>
           <p class='trigger' data-step='1'>Em Janeiro</p>
@@ -56,7 +56,7 @@
     <!-- SECTION 2 -->
     <div class='section2 library__hed'>
       <div class='library__graphic graphic'>
-
+        <h2>Gráfico 2</h2>
         <div class='graphic__prose'>
           <p class='trigger' data-step='-1'>Algum contexto</p>
           <p class='trigger' data-step='1'>Em Janeiro</p>
@@ -77,15 +77,15 @@
     <!-- SECTION 3 -->
     <div class="section3">
       <h2>Some things happen and stuff</h2>
-        <p>Algum contexto</p>
-        <p>Em Janeiro</p>
-        <p>Em Fevereiro</p>
-        <p>Em Março</p>
-        <p>Em Abril</p>
-        <p>Em Maio</p>
-        <p>Em Junho</p>
-        <p>Em Julho</p>
-        <p>Em Agosto</p>
+      <p>Algum contexto</p>
+      <p>Em Janeiro</p>
+      <p>Em Fevereiro</p>
+      <p>Em Março</p>
+      <p>Em Abril</p>
+      <p>Em Maio</p>
+      <p>Em Junho</p>
+      <p>Em Julho</p>
+      <p>Em Agosto</p>
     </div>
 
     <!-- SECTION 4 -->
